<resources>
    <string name="app_name">BIT App</string>
    <!--    FCM -->
    <string name="topic_notice">BITAppNotice</string>
    <string name="topic_event">BITAppEvent</string>
    <string name="topic_update">BITAppUpdate</string>
    <string name="topic_app">BITAppAppNotification</string>
    <!--    App -->
    <string name="app_version">4.0.5</string>
    <string name="full_version">Version 4.0.5</string>
    <string name="instaLink">https://www.instagram.com/bit_lalpur_app</string>
    <string name="erp_link">https://erp.bitmesra.ac.in/iitmsv4eGq0RuNHb0G5WbhLmTKLmTO7YBcJ4RHuXxCNPvuIw=?enc=EGbCGWnlHNJ/WdgJnKH8DA==</string>

    <string name="theory">Theory</string>
    <string name="lab">Lab</string>
    <string name="pe">Program Elective</string>

    <string name="chooseCourseTitle">Choose your course !!</string>
    <string name="chooseSemTitle">Choose your sem !!</string>
    <string name="bba">BBA</string>
    <string name="bca">BCA</string>
    <string name="save">Save</string>
    <string name="connectWithMe">Connect With Me</string>
    <string name="yourSubjects">Your Subjects</string>
    <string name="holidayThisMonth">Holidays this month</string>
    <string name="firstHoliday">Open Holiday for first time to populate this area !!</string>
    <string name="attendanceStats">Attendance Stats</string>
    <string name="overallAttendance">Overall Attendance %s</string>
    <string name="totalPresent">Total Present</string>
    <string name="totalClasses">Total Classes</string>
    <string name="overallAttendanceStatus">Overall Attendance Status</string>
    <string name="noticeType">Notice Type :</string>
    <string name="type">Type :</string>
    <string name="switchLatestUpdate">Switch to new to see latest update !!</string>
    <string name="searchForSubject">Search for subject &#38; more</string>
    <string name="subjects">Subjects</string>
    <string name="notice_a">Notice</string>
    <string name="holiday">Holiday</string>
    <string name="event_a">Event</string>
    <string name="searchAnything">Search for anything</string>
    <string name="setting">Setting</string>
    <string name="edit">Edit</string>
    <string name="dot">.</string>
    <string name="history">History</string>
    <string name="event_this_week">Recent Events</string>
    <string name="show_all">See All</string>
    <string name="back">Back</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="offline_mode">Offline Mode</string>
    <string name="goal">Goal %s</string>
    <string name="add_subject">Add Subject</string>
    <string name="add_subject_syllabus">Add Subject From Syllabus</string>
    <string name="no_result">No result found !!</string>
    <string name="search_any_thing">Search for anything !!</string>
    <string name="next">Next</string>
    <string name="initial_total">Initial Total</string>
    <string name="initial_present">Initial Present</string>
    <string name="uniques_key_warning">Try another Subject name. </string>
    <string name="flip_value">Flip Values</string>
    <string name="update_downloaded">Update Downloaded</string>
    <string name="install">Install</string>
    <string name="app_share_content">Check out BIT Lalpur App :</string>
    <string name="play_store_link">https://play.google.com/store/apps/details?id=</string>
    <string name="share_app">Share BIT APP</string>
    <string-array name="email">
        <item>ayaan35200@gmail.com</item>
    </string-array>
    <string name="bug_repost">BUG Report 😰</string>
    <string name="bug_title">Send Mail</string>
    <string name="gmail_package">com.google.android.gm</string>
    <string name="no_intent_available">No Activity found to handle Intent</string>
    <string name="developed_by">Developed &#38; managed by Ayaan</string>
    <string name="version">Version</string>
    <string name="developers">Developers</string>
    <string name="home_screen_attendance_message">Add attendance to see the progress</string>
    <string name="click_warning">Click one item at a time !!</string>


    <!--    Navigation Menu-->
    <string name="erp">ERP</string>
    <string name="societies">Societies</string>
    <string name="events">Events</string>
    <string name="holidays">Holidays</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="connect">Connect With Us</string>
    <string name="about_us">About Us</string>
    <string name="report">Report Bug</string>
    <string name="bugs">Bugs</string>
    <string name="home">Home</string>
    <string name="notice">Notice</string>
    <string name="courses">Courses</string>
    <string name="attendance">Attendance</string>
    <string name="space"> </string>
    <string name="bit_icon">BIT Icon</string>
    <string name="link">Link</string>
    <string name="notice_new">New</string>
    <string name="notice_old">Old</string>
    <string name="delete_all">Delete All</string>
    <string name="acknowledgements">Acknowledgements</string>
    <string name="insta">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="git">GitHub</string>
    <string name="search_or_add">Search or Add</string>
    <string name="list_all">List All</string>
    <string name="all_holidays">All</string>
    <string name="main">Main</string>
    <string name="res">Res</string>
    <string name="download_syllabus">Download Syllabus</string>
    <string name="sem1">1</string>
    <string name="sem2">2</string>
    <string name="sem3">3</string>
    <string name="sem4">4</string>
    <string name="sem5">5</string>
    <string name="sem6">6</string>
    <string name="blank">""</string>
    <string name="menu">Menu</string>
    <string name="rate_up">Rate Us</string>
    <string name="share_rate_us"><![CDATA[Share & Rate Us]]></string>
    <string name="search_setting">Search Settings</string>
    <string name="set_attendance_percentage">Set Attendance Criteria</string>
    <string name="dismiss">Dismiss</string>
    <string name="course_preference">Course Preference</string>


    <string name="created">Created : %s</string>
    <string name="no_teacher_name">No Teacher Name</string>
    <string name="default_time_formate">MMM dd,YYYY hh:mm aa</string>
    <string name="default_time_formate_without_time">MMM dd,YYYY</string>
    <string name="teacher_name">Teacher\'s Name</string>
    <string name="na">N/A</string>

    <string name="on_track">On track don\'t miss next class</string>
    <string name="leave_class">You can leave %s class</string>
    <string name="error">Error</string>
    <string name="attend_class">Attend Next %s Class</string>
    <string name="present_total">%s/%s</string>
    <string name="attendance_ration_title">Attendance :</string>
    <string name="forward_slash">/</string>
    <string name="status">Status :</string>
    <string name="three_dots">⋮</string>
    <string name="theme">Theme</string>
    <string name="system_default">System default</string>
    <string name="light_theme">Light</string>
    <string name="dark_theme">Dark</string>
    <string name="societies_event"><![CDATA[Societies & Events ]]></string>

    <string name="notice_sender">%s</string>
    <string name="notice_date">- %s</string>
    <string name="invalid_link">Invalid Link</string>
    <string name="open_valid_link">Open valid link!!!!</string>
    <string name="deep_link_share_link">https://bitapp-eng.github.io/notice/path=%s</string>
    <string name="deep_link_share_event_link">https://bitapp-eng.github.io/event/path=%s</string>
    <string name="all">All</string>
    <string name="loading">Loading.....</string>

    <string name="college_notice">College Notice</string>
    <string name="app_notice">App Notice</string>
    <string name="erp_holiday"><![CDATA[Erp & Classes ]]></string>
    <string name="title_table">Time Table</string>
    <string name="title_table_setting">Time Table Setting</string>
    <string name="time_table_title">%s %s %s Section %s</string>
    <string name="time_table_update">Updated on %s</string>
    <string name="boys">Boys</string>
    <string name="girls">Girls</string>
    <string name="choose_section">Choose Section</string>
    <string name="section_a">A</string>
    <string name="section_b">B</string>
    <string name="time_table_preference">Time Table Preference</string>
    <string name="configure_time_table">Configure Time Table First !!!</string>
    <string name="your_tt">Your Time Table</string>
    <string name="all_tt">All Time Table</string>
    <string name="not_available">Syllabus for this sem is not Available</string>
    <string name="imp_war">Important Warning</string>
    <string name="quit_app">Quit App</string>
    <string name="open_new_app">Open New App</string>
    <string name="choose_image">Choose Your Image</string>
    <string name="about">About</string>
    <string name="contributor">Contributors</string>
    <string name="open_setting_sem">Course Setting</string>
    <string name="viewInPlayStore">View in Play Store</string>
    <string name="see_all">View All</string>
    <string name="no_data">No data found</string>
    <string name="chooseTheme">Choose Theme</string>
    <string name="undo">Undo</string>
    <string name="delete">Delete</string>
    <string name="changePercentage">Change Percentage</string>
    <string name="present">Present :</string>
    <string name="total">Total :</string>


</resources>