<?xml version="1.0" encoding="utf-8"?><!--
  ~ BIT Lalpur App
  ~
  ~ Created by Ayaan on 4/14/22, 2:16 PM
  ~ Copyright (c) 2022 . All rights reserved.
  ~ Last modified 4/13/22, 8:52 PM
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.start_up.choose_sem.ChooseSemBottomSheet">

    <TextView
        android:id="@+id/bottom_sheet_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:drawablePadding="8dp"
        android:padding="4dp"
        android:text="@string/course_preference"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_arrow_downward"
        app:drawableTint="?attr/colorPrimary" />

    <ImageButton
        android:id="@+id/bt_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="?attr/actionBarItemBackground"
        android:contentDescription="@string/done"
        android:padding="8dp"
        android:src="@drawable/ic_save"
        app:tint="?attr/colorPrimary" />


    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/bottom_sheet_title"
        android:layout_marginTop="16dp"
        android:background="@color/underLine" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/divider">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/loading"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_centerHorizontal="true"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lottie_autoPlay="true"
                app:lottie_fileName="chooseSem.json"
                app:lottie_loop="true" />

            <TextView
                android:id="@+id/tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chooseCourseTitle"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loading" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group_course"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="@+id/tv"
                app:layout_constraintStart_toStartOf="@+id/tv"
                app:layout_constraintTop_toBottomOf="@+id/tv"
                app:selectionRequired="true"
                app:singleSelection="true">


                <com.google.android.material.chip.Chip
                    android:id="@+id/bt_bca"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bca"
                    android:textColor="@color/stroke_tint_text"
                    android:textSize="15sp"
                    app:checkedIconTint="@color/stroke_tint_text"
                    app:chipBackgroundColor="@color/stroke_tint" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/bt_bba"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bba"
                    android:textColor="@color/stroke_tint_text"
                    android:textSize="15sp"
                    app:checkedIconTint="@color/stroke_tint_text"
                    app:chipBackgroundColor="@color/stroke_tint" />


            </com.google.android.material.chip.ChipGroup>

            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/chooseSemTitle"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/chip_group_course"
                app:layout_constraintStart_toStartOf="@+id/chip_group_course"
                app:layout_constraintTop_toBottomOf="@+id/chip_group_course" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group_sem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="@+id/tv1"
                app:layout_constraintStart_toStartOf="@+id/tv1"
                app:layout_constraintTop_toBottomOf="@+id/tv1"
                app:selectionRequired="true"
                app:singleSelection="true">


                <com.google.android.material.chip.Chip
                    android:id="@+id/bt1"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sem1"
                    android:textColor="@color/stroke_tint_text"
                    android:textSize="15sp"
                    app:checkedIconTint="@color/stroke_tint_text"
                    app:chipBackgroundColor="@color/stroke_tint" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/bt2"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sem2"
                    android:textColor="@color/stroke_tint_text"
                    android:textSize="15sp"
                    app:checkedIconTint="@color/stroke_tint_text"
                    app:chipBackgroundColor="@color/stroke_tint" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/bt3"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sem3"
                    android:textColor="@color/stroke_tint_text"
                    android:textSize="15sp"
                    app:checkedIconTint="@color/stroke_tint_text"
                    app:chipBackgroundColor="@color/stroke_tint" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/bt4"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sem4"
                    android:textColor="@color/stroke_tint_text"
                    android:textSize="15sp"
                    app:checkedIconTint="@color/stroke_tint_text"
                    app:chipBackgroundColor="@color/stroke_tint" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/bt5"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sem5"
                    android:textColor="@color/stroke_tint_text"
                    android:textSize="15sp"
                    app:checkedIconTint="@color/stroke_tint_text"
                    app:chipBackgroundColor="@color/stroke_tint" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/bt6"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sem6"
                    android:textColor="@color/stroke_tint_text"
                    android:textSize="15sp"
                    app:checkedIconTint="@color/stroke_tint_text"
                    app:chipBackgroundColor="@color/stroke_tint" />
            </com.google.android.material.chip.ChipGroup>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>