<?xml version="1.0" encoding="utf-8"?>


<!--
  ~ BIT Lalpur App
  ~
  ~ Created by Ayaan on 4/23/22, 12:36 AM
  ~ Copyright (c) 2022 . All rights reserved.
  ~ Last modified 4/22/22, 11:32 PM
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_bba"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    android:transitionGroup="true"
    tools:context=".ui.fragments.course.sem_choose.SemChooseFragment">

    <include
        android:id="@+id/sem_chose_ext"
        layout="@layout/sem_choose_ext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/hor_scroll"
        android:layout_marginHorizontal="@dimen/grid_1" />


    <HorizontalScrollView
        android:id="@+id/hor_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:fillViewport="true"
        android:scrollbars="none">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/toggle_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/bottomBar"
            android:padding="8dp"
            app:selectionRequired="true"
            app:singleSelection="true">


            <com.google.android.material.chip.Chip
                android:id="@+id/bt1"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sem1"
                android:textColor="@color/stroke_tint_text"
                android:textSize="15sp"
                app:checkedIconTint="@color/stroke_tint_text"
                app:chipBackgroundColor="@color/stroke_tint" />

            <com.google.android.material.chip.Chip
                android:id="@+id/bt2"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sem2"
                android:textColor="@color/stroke_tint_text"
                android:textSize="15sp"
                app:checkedIconTint="@color/stroke_tint_text"
                app:chipBackgroundColor="@color/stroke_tint" />

            <com.google.android.material.chip.Chip
                android:id="@+id/bt3"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sem3"
                android:textColor="@color/stroke_tint_text"
                android:textSize="15sp"
                app:checkedIconTint="@color/stroke_tint_text"
                app:chipBackgroundColor="@color/stroke_tint" />

            <com.google.android.material.chip.Chip
                android:id="@+id/bt4"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sem4"
                android:textColor="@color/stroke_tint_text"
                android:textSize="15sp"
                app:checkedIconTint="@color/stroke_tint_text"
                app:chipBackgroundColor="@color/stroke_tint" />

            <com.google.android.material.chip.Chip
                android:id="@+id/bt5"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sem5"
                android:textColor="@color/stroke_tint_text"
                android:textSize="15sp"
                app:checkedIconTint="@color/stroke_tint_text"
                app:chipBackgroundColor="@color/stroke_tint" />

            <com.google.android.material.chip.Chip
                android:id="@+id/bt6"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sem6"
                android:textColor="@color/stroke_tint_text"
                android:textSize="15sp"
                app:checkedIconTint="@color/stroke_tint_text"
                app:chipBackgroundColor="@color/stroke_tint" />
        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>
</RelativeLayout>