<?xml version="1.0" encoding="utf-8"?>


<!--
  ~ BIT Lalpur App
  ~
  ~ Created by Ayaan on 9/1/21, 1:09 PM
  ~ Copyright (c) 2021 . All rights reserved.
  ~ Last modified 9/1/21, 11:14 AM
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/app_name"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textColor="?attr/colorAccent" />

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_name"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/full_version"
        android:textAppearance="?attr/textAppearanceCaption"
        android:textColor="?attr/colorAccent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:background="@color/underLine" />

    <ImageButton
        android:id="@+id/button_about_us"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignTop="@id/app_name"
        android:layout_alignBottom="@id/version"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="24dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/blank"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_about" />
</RelativeLayout>