<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aatec.bit.fragments.about_us.detail.DetailDevFragment">


    <ImageView
        android:id="@+id/photo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.22000003" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/photo"
        app:layout_constraintStart_toStartOf="@+id/photo"
        app:layout_constraintTop_toBottomOf="@+id/photo"
        tools:text="Ayaan" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/connectWithMe"
            android:textAppearance="?attr/textAppearanceTitleMedium" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageButton
                android:id="@+id/face"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/actionBarItemBackground"
                android:contentDescription="@string/facebook"
                android:padding="16dp"
                android:src="@drawable/ic_facebook"
                app:tint="?attr/colorPrimary" />

            <ImageButton
                android:id="@+id/inst"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/actionBarItemBackground"
                android:contentDescription="@string/insta"
                android:padding="16dp"
                android:src="@drawable/ic_instagram"
                app:tint="?attr/colorPrimary" />

            <ImageButton
                android:id="@+id/git"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/actionBarItemBackground"
                android:contentDescription="@string/git"
                android:padding="16dp"
                android:src="@drawable/ic_github"
                app:tint="?attr/colorPrimary" />

            <ImageButton
                android:id="@+id/linkedin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/actionBarItemBackground"
                android:contentDescription="@string/git"
                android:padding="16dp"
                android:src="@drawable/ic_linkedin"
                app:tint="?attr/colorPrimary" />
        </LinearLayout>
    </LinearLayout>


    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress_bar_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:progress="50"
        app:layout_constraintBottom_toBottomOf="@+id/photo"
        app:layout_constraintEnd_toEndOf="@+id/photo"
        app:layout_constraintStart_toStartOf="@+id/photo"
        app:layout_constraintTop_toTopOf="@+id/photo"
        app:trackThickness="20dp" />
</androidx.constraintlayout.widget.ConstraintLayout>